--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,7 +38,7 @@ a {
 
 .jumbotron {
   margin-top: -1em;
-  background: url("/images/bg.jpg") no-repeat left top;
+  background: url("/images/main.jpg") no-repeat left top;
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
