--- a/views/includes/topnav.jade
+++ b/views/includes/topnav.jade
@@ -1,4 +1,4 @@
-.navbar.navbar-inverse.navbar-fixed-top
+.navbar.navbar-default.navbar-fixed-top
   .container
     .navbar-header
       button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
@@ -6,14 +6,13 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') 
-        i.fa.fa-home
+      a.navbar-brand(href='/') MENU
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
         li
-          a(href='/todos') Todo List
+          a(href='/todos') Make Survey
         li
-          a(href='/users') Users
+          a(href='/users') Survey List
       ul.nav.navbar-nav.navbar-right
         if (!currentUser) 
           li
