--- a/views/includes/topnav.jade
+++ b/views/includes/topnav.jade
@@ -10,9 +10,11 @@
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
         li
-          a(href='/todos') Make Survey
+          //- a(href='/users') Make Survey
+          a(href='/posts/new') Make Survey
+          //- 위에부분 수정 했어 지금부터 survey 붙일거야
         li
-          a(href='/users') Survey List
+          a(href='/posts') Survey List    
       ul.nav.navbar-nav.navbar-right
         if (!currentUser) 
           li
