--- a/views/signin.jade
+++ b/views/signin.jade
@@ -13,9 +13,8 @@ block content
         type='password', id='password', name='password', class='form-control', 
         placeholder='Password', required, autofocus
       )
-      button.btn.btn-lg.btn-primary.btn-block(type='submit') 로그인
+      button.btn.btn-lg.btn-info.btn-block(type='submit') 로그인
       hr
       a.btn.btn-default.btn-mini(href='/users/new') 회원가입
-      | 
-      a.btn.btn-default.btn-mini(href='/reset-password') 비밀번호 재설정
+
       
