--- a/views/users/new.jade
+++ b/views/users/new.jade
@@ -5,18 +5,21 @@ block content
     h1.page-header 회원가입
     form(action='/users', method='POST')
       .form-group
-        label(for='name') Name
+        label.label.label.info(for='name') Name
         input.form-control(type='text', id='name', name='name', placeholder='Your name')
       .form-group
-        label(for='email') Email address
+        label.label.label.info(for='email') Email address
         input.form-control(type='email', id='email', name='email', placeholder='Email')
       .form-group
-        label(for='password') Password
+        label.label.label.info(for='password') Password
         input.form-control(type='password', id='password', name='password', placeholder='Password')
       .form-group
-        label(for='password_confirmation') Password 확인
+        label.label.label.info(for='password_confirmation') Password 확인
         input.form-control(type='password', id='password_confirmation', name='password_confirmation', placeholder='Password')
+      .form-group
+        label.label.label-info(for='introduce') Show yours
+        textarea.form-control(type="text",id='introduce', placeholder="introduce yourself" rows="15")
       div.form-actions
         a.btn.btn-default(href='javascript:window.history.back();') 뒤로 
         | 
-        button.btn.btn-primary(type='submit') 회원가입 
+        button.btn.btn-info(type='submit') 회원가입 
