--- a/views/posts/new.jade
+++ b/views/posts/new.jade
@@ -16,5 +16,5 @@ block content
     .form-action
       a.btn.btn-default(href='javascript:window.history.back();') 뒤로 
       | &nbsp;
-      button.btn.btn-primary(type='submit') 설문 완료
+      button.btn.btn-info(type='submit') 설문 완료
   
