--- a/views/posts/show.jade
+++ b/views/posts/show.jade
@@ -10,13 +10,13 @@ block content
   table.table
     tr
       th email
-      th content
+      th question
       th time
-    each comment in comments
+    each question in questions
       tr
-        td= comment.email
-        td= comment.content
-        td= moment(comment.createdAt).format('YYYY/MM/DD')
+        td= question.email
+        td= question.content
+        td= moment(question.createdAt).format('YYYY/MM/DD')
   
   form.form-inline(action='/posts/' + post._id + '/comments', method='POST')
   
