--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -22,4 +22,4 @@ block content
               a.btn.btn-xs.btn-default(href='/users/#{user._id}/edit') 수정
               | 
               a.btn.btn-xs.btn-default(href='/users/#{user._id}?_method=DELETE') 삭제
-    a.btn.btn-primary(href='/users/new') 사용자추가
+    a.btn.btn-info(href='/users/new') 사용자추가
