--- a/views/users/new.jade
+++ b/views/users/new.jade
@@ -20,6 +20,6 @@ block content
         label.label.label-info(for='introduce') Show yours
         textarea.form-control(type="text",id='introduce', placeholder="introduce yourself" rows="15")
       div.form-actions
-        a.btn.btn-default(href='javascript:window.history.back();') 뒤로 
+        a.btn.btn-default(href='javascript:window.history.back();') back 
         | 
-        button.btn.btn-info(type='submit') 회원가입 
+        button.btn.btn-info(type='submit') Ok 
