exception error solved

--- a/views/answers/new.jade
+++ b/views/answers/new.jade
@@ -8,7 +8,7 @@ block content
   form(action='/answers', method='POST')
     .form-group
       label(for='answer') Answer the Question
-      input.form-control(name='answer' placeholder="input Answer The Question")
+      input.form-control(name='answer' placeholder="Input And Answer The Question")
     br
     br
     .form-action
