--- a/views/signin.jade
+++ b/views/signin.jade
@@ -14,6 +14,10 @@ block content
         placeholder='Password', required, autofocus
       )
       button.btn.btn-lg.btn-info.btn-block(type='submit') Login
+      | 
+      a.btn.btn-primary.btn-lg.btn-block(href='/auth/facebook')
+        i.fa.fa-facebook.fa-lg
+        | &nbsp; &nbsp;Signin with Facebook
       hr
       a.btn.btn-default.btn-mini(href='/users/new') New User
 
